# vf-ai-agent

./: .dockerignore  .gitignore  DOCUMENTATION.md  Dockerfile  LOCAL_RUN.md  README.md  commands.txt  deploy_cloudrun.sh  main.py  pyproject.toml
ngni_agent/: agent.py  prompts.py
ngni_agent/.adk/: session.db
ngni_agent/sub_agents/: __init__.py
ngni_agent/sub_agents/bigquery/: agent.py  prompts.py  tools.py
ngni_agent/sub_agents/rag_agent/: agent.py  prompts.py  tools.py
ngni_agent/sub_agents/search_agent/: agent.py  prompts.py
