[tool.poetry]
name = "ngni-agent"
version = "0.1.0"
description = "NGNI Agent with Municipality-Level Ranking and Multi-Source Synthesis"
authors = ["Mohit"]
license = "Apache License 2.0"
readme = "README.md"
packages = [
    {include = "ngni_agent"}
]

[tool.poetry.dependencies]
python = ">=3.10,<4"
google-adk = { version = "==1.23.0", extras = ["eval"] }
google-genai = "==1.56.0"
google-cloud-bigquery = ">=3.31.0,<4.0.0"
google-cloud-aiplatform = { version = ">=1.88.0,<2.0.0", extras = ["adk", "agent-engines"] }
kfp = ">=2.15.2"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"